--- a/public/css/base.css
+++ b/public/css/base.css
@@ -17,8 +17,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", "Nunito Sans", "Segoe UI", sans-serif;
-  font-size: var(--text-size);
+  font-family: "Poppins", "Segoe UI", Tahoma, sans-serif;
   line-height: 1.45;
 }
 
